Fix box alignment issue

--- a/leaflet.treescale.css
+++ b/leaflet.treescale.css
@@ -5,6 +5,7 @@
 }
 .tree-scale-box {
   border: 2px solid #777;
+  box-sizing: content-box;
   background: #fff;
   background: rgba(255, 255, 255, 0.5);
 }
